# ChangeLog for x11-plugins/desklet-sidecandyrhythmbox
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/desklet-sidecandyrhythmbox/Attic/ChangeLog,v 1.2 2005/05/09 18:46:36 dholm Exp $

  09 May 2005; David Holm <dholm@gentoo.org>
  desklet-sidecandyrhythmbox-0.72.ebuild:
  Added to ~ppc.

*desklet-sidecandyrhythmbox-0.72 (07 May 2005)

  07 May 2005; Joe Sapp <nixphoeni@gentoo.org>
  +desklet-sidecandyrhythmbox-0.72.ebuild:
  Initial commit
