@@ -1,4 +1,6 @@
-MD5 e94e78cf1635cace20d9298d64d59ed4 ChangeLog 509
 MD5 ff23c9f437096671565a8bf5d7111226 desklet-sidecandyrhythmbox-0.72.ebuild 713
+MD5 a1967aa9b0f0923d0951ec03585e8623 ChangeLog 727
 MD5 6bdff92f19f48041cb28629b5174dae1 metadata.xml 162
+MD5 2842fe546b99831e52d8e5bca3f6dc30 desklet-sidecandyrhythmbox-0.72-r1.ebuild 885
 MD5 77ad997f11133f9abcaf60cf16342611 files/digest-desklet-sidecandyrhythmbox-0.72 74
+MD5 77ad997f11133f9abcaf60cf16342611 files/digest-desklet-sidecandyrhythmbox-0.72-r1 74
