@@ -1,6 +1,12 @@
 # ChangeLog for x11-plugins/desklet-sidecandyrhythmbox
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/desklet-sidecandyrhythmbox/Attic/ChangeLog,v 1.2 2005/05/09 18:46:36 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/desklet-sidecandyrhythmbox/Attic/ChangeLog,v 1.3 2005/05/27 00:49:41 nixphoeni Exp $
+
+*desklet-sidecandyrhythmbox-0.72-r1 (27 May 2005)
+
+  27 May 2005; Joe Sapp <nixphoeni@gentoo.org>
+  +desklet-sidecandyrhythmbox-0.72-r1.ebuild:
+  Added SideCandy fix for versions 0.35_rc1 and greater (presumably)
 
   09 May 2005; David Holm <dholm@gentoo.org>
   desklet-sidecandyrhythmbox-0.72.ebuild:
